[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.2"
hex = "0.4"
anyhow = "1.0"
serde_json = "1.0.48"
include_dir = "0.5.0"
libra-config = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
stdlib = { git="https://github.com/libra/libra", version = "0.1.0" }
vm = {git="https://github.com/libra/libra", version="0.1.0"}
move-vm-runtime = {git="https://github.com/libra/libra", version="0.1.0" }
move-vm-state = {git="https://github.com/libra/libra", version="0.1.0" }
language-e2e-tests = { git="https://github.com/libra/libra", version = "0.1.0" }
bytecode-verifier = { git = "https://github.com/libra/libra", version = "0.1.0" }
datatest-stable = { git = "https://github.com/libra/libra", version = "0.1.0" }
functional-tests = { git = "https://github.com/libra/libra", version = "0.1.0" }
ir-to-bytecode = { git = "https://github.com/libra/libra", version = "0.1.0" }
libra-types = { git = "https://github.com/libra/libra", version = "0.1.0" }
move-ir-types = { git = "https://github.com/libra/libra", version = "0.1.0" }
compiler = { git = "https://github.com/libra/libra", version = "0.1.0" }
move-vm-types= { git = "https://github.com/libra/libra", version = "0.1.0" }